@@ -31,6 +31,16 @@
 </p>
 
 <p>
+    <a href="https://trac.cyberduck.io/milestone/5.0"><strong>Version 5.0</strong></a>
+</p>
+<ul>
+    <li>[Feature] Segmented downloads with multiple connections per file (<a
+            href="https://trac.cyberduck.io/ticket/4498">#4498</a>)
+    </li>
+    <li>[Feature] Support for Spectra BlackPearl Deep Storage Gateway (Spectra S3)</li>
+</ul>
+
+<p>
     <a href="https://trac.cyberduck.io/milestone/4.9.1"><strong>Version 4.9.1</strong></a>
 </p>
 <ul>
